# max

./: .clang-format  .cproject  .gdbinit  .gitattributes  .gitignore  .project  404.html  404.md  CMakeLists.txt  CMakePresets.json  Gemfile  LICENSE  MAXRUN.map  README.md  _config.yml  about.md  build.md  defects.md  devenv.md  documentation.md  download.md  evolution.md  faq.md  fixdos.md  index.md  install.md  license.md  makefile  max msys2-i686 (attach).launch  max msys2-i686.launch  max msys2-x86_64 (attach).launch  max msys2-x86_64.launch  max ubuntu 19.10.launch  max ubuntu.launch  network.md  roadmap.md  save.md  scripting.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build.yml  build_arch.yml  build_deb.yml  build_flatpak.yml  release.yml
.github/workflows/scripts/linux/: get-dependencies
_includes/: custom-head.html  drive_player.html  footer.html  head.html  header.html  image_note.html  note.html  video_note.html  video_player.html  yt_player.html
_layouts/: default.html  home.html
_posts/: 2019-07-30-A-new-start.md  2019-11-25-First-rendered-screen.md  2019-11-29-Fixed-color-mapping.md  2019-12-02-The-mouse-is-moving.md  2019-12-11-Moving-around-in-the-menus.md  2019-12-12-In-game.md  2019-12-13-Played-a-game.md  2019-12-21-Sprites-finally-render-correctly.md  2020-01-03-Winter-holidays-gone.md  2020-02-15-Messing around with demo versions of MAX.md  2020-02-15-Messing-around-with-demo-versions-of-MAX.md  2020-02-19-Hidden-secrets.md  2020-05-27-Easter-eggs.md  2020-09-05-Mech-commander-Carlton-L.md  2020-09-13-Videos-render-correctly.md  2021-05-09-Pathfinding.md  2021-07-18-Task-manager.md  2021-12-27-Concord-campaign.md  2022-04-29-Work-work.md  2022-07-07-The-game-is-over.md  2022-12-22-Status-report.md  2023-02-19-Renderer-progress.md  2023-03-13-Full-hd-game-play.md  2023-10-19-New-audio-engine.md  2024-07-20-max2-beta-test-program.md  2024-07-21-scenario-editor.md
_sass/: custom.scss
assets/: .portable  CMakeLists.txt  LICENSE  PATCHES.RES  help.json  lang_de-DE.ini  lang_en-US.ini  lang_english.ini  lang_es-ES.ini  lang_fr-FR.ini  lang_french.ini  lang_german.ini  lang_it-IT.ini  lang_italian.ini  lang_ru-RU.ini  lang_russian.ini  lang_spanish.ini  language.json  main.scss  max-port-installer.in  max-port.desktop.in  max-port.in  max.ini  maxint.json  settings.ini  settings.json
assets/clips/: defect_2.vtt  defect_68.vtt  defect_69.vtt  defect_70.vtt
assets/css/: documentation.css  style.scss
assets/files/: campaign0001.mission.json  campaign0001.winloss_conditions.lua  default.game_rules.lua  max_v104.7z  max_v104_saveformat.7z  mission.schema.json  steam_patch.7z
assets/images/: site.webmanifest
cmake/: Toolchain-cross-mingw32-linux.cmake  enet.cmake  freetype.cmake  json.cmake  jsonschema.cmake  lua.cmake  lz4.cmake  mingw32-i686-build.sh  miniaudio.cmake  miniupnp.cmake  rectpack2d.cmake  rmlui.cmake  sdl2.cmake  sdl2_mixer.cmake  sdl2_net.cmake  sdl3.cmake  setup.cmake  sha2.cmake  toolchain-clang64-clang.cmake  toolchain-cross-mingw-w64-i686.cmake  toolchain-cross-mingw-w64-x86_64.cmake  toolchain-linux-i686.cmake  toolchain-linux-x86_64.cmake  toolchain-mingw-w64-i686-clang.cmake  toolchain-mingw-w64-i686.cmake  toolchain-mingw-w64-x86_64-clang.cmake  toolchain-mingw-w64-x86_64.cmake  toolchain-ucrt64-gcc.cmake  utf8proc.cmake  versions.cmake  xoshiro.cmake
cmake/deb/: deb.cmake
cmake/lib-iconv/: CMakeLists.txt  CMakeLists.txt.in
cmake/nsis/: install.nsh  nsis.cmake
cmake/patches/: jsonschema.patch  lua.patch  miniaudio.patch
cmake/scripts/linux/: .gitignore  PKGBUILD  get-dependencies
conf/: codegen.json  fnmap_chgcalls.conf  wrappers.conf
debian/: changelog  control  copyright  rules  watch
debian/source/: include-binaries
debian/upstream/: metadata
dependencies/: dependencies.md5
dependencies/patches/: jsonschema.patch  lua.patch  miniaudio.patch  rmlui.patch  xoshiro.patch
doc/templates/: max_c_header_file.xml  max_c_source_file.xml
flatpak/: io.github.max-port.yaml  metainfo.xml.in
res/: .gitignore  MAX.INI  maxrun.map
src/: CMakeLists.txt  abstractupgrademenu.cpp  abstractupgrademenu.hpp  access.cpp  access.hpp  accessmap.cpp  accessmap.hpp  adjustrequest.cpp  adjustrequest.hpp  ai.cpp  ai.hpp  ai_player.cpp  ai_player.hpp  aiattack.cpp  aiattack.hpp  ailog.cpp  ailog.hpp  aiplayer.cpp  aiplayer.hpp  airpath.cpp  airpath.hpp  allocmenu.cpp  allocmenu.hpp  assertmenu.cpp  assertmenu.hpp  assoc.c  assoc.h  attributes.cpp  attributes.hpp  builder.cpp  builder.hpp  builderpath.cpp  builderpath.hpp  buildmenu.cpp  buildmenu.hpp  button.c  button.cpp  button.h  button.hpp  buttonmanager.cpp  (+462 more)
src/installer/: CMakeLists.txt  control.cpp  control.hpp  controls.cpp  controls.hpp  flic.cpp  flic.hpp  flics.cpp  flics.hpp  installer.cpp  installer.hpp  music.cpp  music.hpp  mve_parser.cpp  mve_parser.hpp  palette.hpp  panel.cpp  panel.hpp  panels.cpp  panels.hpp  portraits.cpp  portraits.hpp  procedures.cpp  procedures.hpp  progress_event.cpp  progress_event.hpp  resource.cpp  resource.hpp  shadow.cpp  shadow.hpp  sound.cpp  sound.hpp  soundeffects.cpp  soundeffects.hpp  sprite.cpp  sprite.hpp  sprites.cpp  sprites.hpp  videos.cpp  videos.hpp  (+2 more)
test/: CMakeLists.txt  registerarray.cpp  smartarray.cpp  smartfile.cpp  smartlist.cpp  smartobjectarray.cpp  smartpointer.cpp  smartstring.cpp  sortedarray.cpp  test_main.cpp  testobject.hpp
util/: .gitignore  chgcalls.py  codegen.py  mkwrappers.py
