install(FILES "LICENSE" DESTINATION ${GAME_INSTALL_PATH})
install(FILES "PATCHES.RES" DESTINATION ${GAME_INSTALL_PATH})
install(FILES ".portable" DESTINATION ${GAME_INSTALL_PATH})
install(FILES "settings.ini" DESTINATION ${GAME_INSTALL_PATH})
install(FILES "lang_english.ini" DESTINATION ${GAME_INSTALL_PATH})
install(FILES "lang_french.ini" DESTINATION ${GAME_INSTALL_PATH})
install(FILES "lang_german.ini" DESTINATION ${GAME_INSTALL_PATH})
install(FILES "lang_italian.ini" DESTINATION ${GAME_INSTALL_PATH})
install(FILES "lang_spanish.ini" DESTINATION ${GAME_INSTALL_PATH})
install(FILES "lang_russian.ini" DESTINATION ${GAME_INSTALL_PATH})
