install(FILES "LICENSE" DESTINATION ${GAME_INSTALL_PATH})
install(FILES "PATCHES.RES" DESTINATION ${GAME_INSTALL_PATH})
install(FILES "settings.ini" DESTINATION ${GAME_INSTALL_PATH})
install(FILES "lang_en-US.ini" DESTINATION ${GAME_INSTALL_PATH})
install(FILES "lang_fr-FR.ini" DESTINATION ${GAME_INSTALL_PATH})
install(FILES "lang_de-DE.ini" DESTINATION ${GAME_INSTALL_PATH})
install(FILES "lang_it-IT.ini" DESTINATION ${GAME_INSTALL_PATH})
install(FILES "lang_es-ES.ini" DESTINATION ${GAME_INSTALL_PATH})
install(FILES "lang_ru-RU.ini" DESTINATION ${GAME_INSTALL_PATH})
install(FILES "language.json" DESTINATION ${GAME_INSTALL_PATH})
install(FILES "help.json" DESTINATION ${GAME_INSTALL_PATH})

if(MINGW)
	install(FILES ".portable" DESTINATION ${GAME_INSTALL_PATH})
endif()
