install(FILES "LICENSE" DESTINATION ${GAME_INSTALL_PATH})
install(FILES "PATCHES.RES" DESTINATION ${GAME_INSTALL_PATH})
install(FILES "settings.json" DESTINATION ${GAME_INSTALL_PATH})
install(FILES "language.json" DESTINATION ${GAME_INSTALL_PATH})
install(FILES "help.json" DESTINATION ${GAME_INSTALL_PATH})

if(MINGW)
	install(FILES ".portable" DESTINATION ${GAME_INSTALL_PATH})
endif()
