cmake_minimum_required (VERSION 3.24)

set(DEPS_BINARY_DIR ${PROJECT_BINARY_DIR}/_deps/iconv-build)
set(DEPS_SOURCE_DIR ${PROJECT_BINARY_DIR}/_deps/iconv-src)

configure_file(${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt.in ${DEPS_SOURCE_DIR}/CMakeLists.txt @ONLY)
execute_process(COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" . WORKING_DIRECTORY ${DEPS_SOURCE_DIR})
execute_process(COMMAND ${CMAKE_COMMAND} --build . WORKING_DIRECTORY ${DEPS_SOURCE_DIR})

if(${BUILD_SHARED_LIBS})
	if(NOT CMAKE_IMPORT_LIBRARY_PREFIX)
		set(CMAKE_IMPORT_LIBRARY_PREFIX ${CMAKE_SHARED_LIBRARY_PREFIX})
	endif()
	
	if(NOT CMAKE_IMPORT_LIBRARY_SUFFIX)
		set(CMAKE_IMPORT_LIBRARY_SUFFIX ${CMAKE_SHARED_LIBRARY_SUFFIX})
	endif()

	set(ICONV_LIB_NAME ${CMAKE_IMPORT_LIBRARY_PREFIX}iconv${CMAKE_IMPORT_LIBRARY_SUFFIX})
else()
	set(ICONV_LIB_NAME ${CMAKE_STATIC_LIBRARY_PREFIX}iconv${CMAKE_STATIC_LIBRARY_SUFFIX})
endif()

add_library(Iconv INTERFACE)
set_property(TARGET Iconv APPEND PROPERTY INTERFACE_LINK_LIBRARIES "${DEPS_BINARY_DIR}/lib/${ICONV_LIB_NAME}")
set_property(TARGET Iconv APPEND PROPERTY INTERFACE_INCLUDE_DIRECTORIES "${DEPS_BINARY_DIR}/include")

add_dependencies(Iconv iconv_external)

if(NOT TARGET Iconv::Iconv)
	add_library(Iconv::Iconv ALIAS Iconv)
endif()
